--- a/styles/Moderation.module.css
+++ b/styles/Moderation.module.css
@@ -18,15 +18,23 @@
   overflow: visible;
 }
 
+.bubbleContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex-shrink: 0;
+}
+
 .moderationPanelLeft {
-  width: 60%;
+  width: 55%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .moderationPanelRight {
-  width: 40%;
+  width: 35%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -47,7 +55,7 @@
 }
 
 .campaignVideo {
-  width: 100%;
+  width: 90%;
   aspect-ratio: 16/9;
   border-radius: 12px;
   overflow: hidden;
